--- a/starter/index.html
+++ b/starter/index.html
@@ -29,7 +29,9 @@
           <span class="heading-primary-sub">is where life happens</span>
         </h1>
 
-        <a href="#" class="btn btn-white btn-animated">Discover Our Tours</a>
+        <a href="#" onclick="alert('sike!')" class="btn btn-white btn-animated"
+          >Discover Our Tours</a
+        >
       </div>
     </header>
   </body>
