--- a/starter/index.html
+++ b/starter/index.html
@@ -17,19 +17,22 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo-box">
+      <div class="header__logo-box">
         <!--putting a div around logo is good practice-->
-        <img src="img/logo-white.png" alt="logo" class="logo" />
+        <img src="img/logo-white.png" alt="logo" class="header__logo" />
         <!--we need all text for SEO to recognize-->
       </div>
-      <div class="text-box">
+      <div class="header__text-box">
         <h1 class="heading-primary">
           <!-- h1 is very important for google to find out about our page! So we put header and short description here all together -->
-          <span class="heading-primary-main">Outdoors</span>
-          <span class="heading-primary-sub">is where life happens</span>
+          <span class="heading-primary--main">Outdoors</span>
+          <span class="heading-primary--sub">is where life happens</span>
         </h1>
 
-        <a href="#" onclick="alert('sike!')" class="btn btn-white btn-animated"
+        <a
+          href="#"
+          onclick="alert('sike!')"
+          class="btn btn--white btn--animated"
           >Discover Our Tours</a
         >
       </div>
