--- a/starter/index.html
+++ b/starter/index.html
@@ -38,6 +38,65 @@
       </div>
     </header>
 
+    <!--main contains rest of the part-->
+    <!--Emmet will make life easier! .test press enter gets div with class test!!-->
+    <!--write section.classname and it'll create a section with class of that class name-->
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+          <!--we need these for we need different property for different cases-->
+          <!--utility class-->
+          <h2 class="heading-secondary">
+            Exiting tours for adventurious people!
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tartiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit
+              dolorum maiores molestias sit, quisquam laborum omnis possimus non
+            </p>
+
+            <h3 class="heading-tartiary u-margin-bottom-small">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+              tenetur sunt a doloribus odio et
+            </p>
+
+            <a href="#" class="btn-text">
+              Learn more &rarr;<!--gives the arrow-->
+            </a>
+            <!--press tab to move around the typing places-->
+          </div>
+          <div class="col-1-of-2">
+            <!--.composition>(img.composition__photo.composition__photo--p)*3 this in one line-->
+            <div class="composition">
+              <img
+                src="img/nat-1-large.jpg"
+                alt="photo 1"
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src="img/nat-2-large.jpg"
+                alt="photo 2"
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src="img/nat-3-large.jpg"
+                alt="photo 3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <!--
     <section class="grid-test">
       <div class="row">
