added features section

--- a/starter/index.html
+++ b/starter/index.html
@@ -8,7 +8,6 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -93,6 +92,63 @@
               />
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <!--we don't touch the grid columns. so another box-->
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tartiary u-margin-bottom-small">
+                Explore The World
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <!--we don't touch the grid columns. so another box-->
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tartiary u-margin-bottom-small">
+                Meet Nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <!--we don't touch the grid columns. so another box-->
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tartiary u-margin-bottom-small">
+                Find your way
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <!--we don't touch the grid columns. so another box-->
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tartiary u-margin-bottom-small">
+                Live a healther life
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+              </p>
+            </div>
+          </div>
+          <!--.row>.col-1-of-4>.feature-box-->
         </div>
       </section>
     </main>
