--- a/starter/index.html
+++ b/starter/index.html
@@ -152,6 +152,32 @@
           <!--.row>.col-1-of-4>.feature-box-->
         </div>
       </section>
+
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">Most popular tours</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-1">
+                <!--in BEM we do not nest where it is not nessesery. Here the text doesn't need to be dependent on side-->
+                <div class="card__picture card__picture--1">&nbsp;</div>
+
+                <div class="card__heading">Heading</div>
+
+                <div class="card__details">Details</div>
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                Back
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">Col 1 of 3</div>
+          <div class="col-1-of-3">Col 1 of 3</div>
+        </div>
+      </section>
     </main>
 
     <!--
