--- a/starter/index.html
+++ b/starter/index.html
@@ -164,17 +164,109 @@
                 <!--in BEM we do not nest where it is not nessesery. Here the text doesn't need to be dependent on side-->
                 <div class="card__picture card__picture--1">&nbsp;</div>
 
-                <div class="card__heading">Heading</div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">
+                    The Sea Explorer
+                  </span>
+                </h4>
 
-                <div class="card__details">Details</div>
+                <div class="card__details">
+                  <ul>
+                    <li>3 day tours</li>
+                    <li>up 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>sleep in cozy hotels</li>
+                    <li>Difficulty: easy</li>
+                  </ul>
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
-                Back
+                <div class="card__cta">
+                  <!--call to action : CTA-->
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$297</p>
+                  </div>
+
+                  <a href="#" class="btn btn--white">Book Now</a>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-1-of-3">Col 1 of 3</div>
-          <div class="col-1-of-3">Col 1 of 3</div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-2">
+                <!--in BEM we do not nest where it is not nessesery. Here the text doesn't need to be dependent on side-->
+                <div class="card__picture card__picture--2">&nbsp;</div>
+
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--2">
+                    The Forest Hiker
+                  </span>
+                </h4>
+
+                <div class="card__details">
+                  <ul>
+                    <li>7 day tours</li>
+                    <li>up 40 people</li>
+                    <li>6 tour guides</li>
+                    <li>sleep in privided tents</li>
+                    <li>Difficulty: medium</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-2">
+                <div class="card__cta">
+                  <!--call to action : CTA-->
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$597</p>
+                  </div>
+
+                  <a href="#" class="btn btn--white">Book Now</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-3">
+                <!--in BEM we do not nest where it is not nessesery. Here the text doesn't need to be dependent on side-->
+                <div class="card__picture card__picture--3">&nbsp;</div>
+
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--3">
+                    The Snow Adventurer
+                  </span>
+                </h4>
+
+                <div class="card__details">
+                  <ul>
+                    <li>5 day tours</li>
+                    <li>up 15 people</li>
+                    <li>3 tour guides</li>
+                    <li>sleep in cozy hotels</li>
+                    <li>Difficulty: hard</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-3">
+                <div class="card__cta">
+                  <!--call to action : CTA-->
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$897</p>
+                  </div>
+
+                  <a href="#" class="btn btn--white">Book Now</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-bottom-huge">
+          <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
     </main>
