--- a/starter/index.html
+++ b/starter/index.html
@@ -271,6 +271,46 @@
       </section>
     </main>
 
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Careers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Build my <a href="#" class="footer__link">Page</a> for his online
+            ocurse
+            <a href="#" class="footer__link">Advanched CSS and Sass</a>
+            Copyright &copy by jonas Schmedman . You are 100% allowed to use
+            this webpage for both personal and comercial use. But not to claim
+            it as your own deesign . Credit to the original author , Jonas
+            Schemdtmann , is ofcourse highly apprecieted
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <!--
     <section class="grid-test">
       <div class="row">
